--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-.vscode
-
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -80,7 +78,7 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
